# stellenscout

./: .coverage  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  daily_task.py  pyproject.toml  requirements.txt  setup_db.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/copilot/: new-pydantic-model.prompt.md  search-api-specialist.prompt.md  strategy-specialist.prompt.md
.github/prompts/: new-db-function.prompt.md  new-pydantic-model.prompt.md  pr-review.prompt.md  write-tests.prompt.md
.github/workflows/: ci.yml  daily-digest.yml
.streamlit/: config.toml
docs/: PREFILTER_BENCHMARK.md
docs/search-api/: AGENT.md  Improving Job Search API Results.md
docs/strategy/: AGENT.md  ROADMAP.md
immermatch/: __init__.py  app.py  bundesagentur.py  cache.py  cv_parser.py  db.py  emailer.py  evaluator_agent.py  llm.py  location.py  models.py  search_agent.py  search_provider.py  serpapi_provider.py
immermatch/pages/: impressum.py  privacy.py  unsubscribe.py  verify.py
immermatch/search_api/: __init__.py  _constants.py  blocked_portals.txt  bundesagentur.py  link_validator.py  reliability_labels.jsonl  search_agent.py  search_provider.py  serpapi_provider.py
jobmatch_de/: __init__.py  app.py  cache.py  cv_parser.py  evaluator_agent.py  llm.py  main.py  models.py  search_agent.py
scripts/: analyze_labels.py  label_reliability.py
stellenscout/: __init__.py  app.py  cache.py  cv_parser.py  db.py  emailer.py  evaluator_agent.py  llm.py  main.py  models.py  search_agent.py
stellenscout/pages/: impressum.py  privacy.py  unsubscribe.py  verify.py
tests/: conftest.py  test_app_consent.py  test_app_ui.py  test_bundesagentur.py  test_cache.py  test_cv_parser.py  test_daily_task.py  test_db.py  test_emailer.py  test_evaluator_agent.py  test_integration.py  test_link_validator.py  test_llm.py  test_location.py  test_models.py  test_pages_unsubscribe.py  test_pages_verify.py  test_search_agent.py  test_search_provider.py  test_serpapi_provider.py
tests/fixtures/: sample.md  sample.txt  sustainability_cv.md
