[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellenscout"
version = "0.1.0"
description = "AI-powered job matching for the European market"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "google-search-results>=2.4.2",
    "google-genai>=1.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "supabase>=2.0.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
prod = [
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "google-search-results>=2.4.2",
    "google-genai>=1.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "supabase>=2.0.0",
    "resend>=2.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["stellenscout*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"daily_task.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "stellenscout.db",
    "stellenscout.emailer",
    "stellenscout.app",
    "stellenscout.pages.*",
    "daily_task",
]
ignore_errors = true
